2010-08-25  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/45393
	* tree-ssa-math-opts.c (execute_cse_sincos_1): Properly transfer
	and clean EH info.  Avoid SSA update.
	(execute_cse_sincos): Cleanup the CFG if it has changed.

	* g++.dg/torture/pr45393.C: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@163541 138bc75d-0d04-0410-961f-82ee72b054a4